[Win] Implement deviceorientationabsolute data fetcher.

Implement deviceorientationabsolute according to specification
on the Windows platform.

spec:
https://w3c.github.io/deviceorientation/spec-source-orientation.html

TEST=https://timvolodine.github.io/deviceorientation-test/
BUG=612776

Review-Url: https://codereview.chromium.org/1986263003
Cr-Commit-Position: refs/heads/master@{#394752}

Former-commit-id: 14e071cebff88424a7fce22a900a2d45f82f7b40